# Produktmodell

./: .gitignore  README.adoc  index.html  pyproject.toml
Anwendung/: E-Rezept.yaml  EMP.yaml  EPA.yaml  EPKA.yaml  KIM.yaml  NFDM.yaml  TI-Messenger.yaml  VSDM.yaml  WANDA.yaml
Composition/: Gesamtübersicht.view.gem.yaml  Netzwerk.gem.yaml  ePA.gem.yaml
Diagramme/: Gesamtübersicht.view.csv  Netzwerk.composition.csv  Primärsysteme.drawio  Systeme Draft.drawio  ePA.composition.csv
Dokumente/: gemSpec_FD_eRp_V1.0.0_OPB400.html  gemSpec_FD_eRp_V1.1.0_OPB401.html  gemSpec_FD_eRp_V1.1.1_OPB4011.html  gemSpec_FD_eRp_V1.2.0_OPB402.html  gemSpec_FD_eRp_V1.3.0_releaseERezept110.html  gemSpec_FD_eRp_V1.4.0_Mainline_OPB1.html  gemSpec_FD_eRp_V1.4.0_testvorbERezeptMaint213.html  gemSpec_TI-Messenger-FD_V1.0.0 RC_releaseTIMessenger10.html  gemSpec_TI-Messenger-FD_V1.0.0_Mainline_OPB1.html  gemSpec_TI-Messenger-FD_V1.0.0_releaseTIMessenger100.html  gemTemplate.css
Insight/: Anbietertyp.csv  Anbietertypversion.csv  Anwendung.csv  Anwendung.v2.csv  Anwendungsversion.csv  Anwendungsversion.v2.csv  Gueltigkeit.csv  Produkttyp.csv  Produkttypversion.csv  Team.csv  Wandatyp.csv  Wandatypversion.csv
Produkttypen/: gemProdT_Kon.yaml
Schema/: gem-schema.json  gem-view-schema.json
Views/: Netzwerk.gem.yaml  ePA.view.gem.yaml
tool/: yaml2csv.py
